# postgres-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  devenv.nix  devenv.yaml  docker-entrypoint.sh  justfile  pyproject.toml  pytest.ini  smithery.yaml
.github/workflows/: build.yml  docker-build-dockerhub.yml
examples/: movie-app.md
src/postgres_mcp/: __init__.py  server.py
src/postgres_mcp/dapi/: __init__.py  dapi_tools.py
src/postgres_mcp/database_health/: __init__.py  buffer_health_calc.py  conftest.py  connection_health_calc.py  constraint_health_calc.py  database_health.py  index_health_calc.py  replication_calc.py  sequence_health_calc.py  test_database_health_tool.py  vacuum_health_calc.py
src/postgres_mcp/dta/: __init__.py  artifacts.py  dta_calc.py  dta_tools.py  safe_sql.py  sql_driver.py  sql_tool.py  test_dta_calc.py  test_dta_calc_integration.py  test_safe_sql.py
src/postgres_mcp/explain/: README.md  __init__.py  explain_plan.py  tools.py
src/postgres_mcp/monolith/: __init__.py  monolith_tools.py
src/postgres_mcp/sql/: __init__.py  bind_params.py  extension_utils.py  index.py  safe_sql.py  sql_driver.py
src/postgres_mcp/top_queries/: top_queries_calc.py
tests/: Dockerfile.postgres-hypopg  README.md  conftest.py  utils.py
tests/integration/: test_top_queries_integration.py
tests/integration/dta/: test_dta_calc_integration.py
tests/unit/: test_access_mode.py  test_db_conn_pool.py  test_obfuscate_password.py  test_sql_driver.py
tests/unit/database_health/: test_database_health_tool.py
tests/unit/dta/: test_dta_calc.py
tests/unit/explain/: test_explain_plan.py  test_explain_plan_real_db.py  test_server.py  test_server_integration.py  test_tools.py
tests/unit/index/: test_dta_calc.py
tests/unit/sql/: test_db_conn_pool.py  test_obfuscate_password.py  test_readonly_enforcement.py  test_safe_sql.py  test_sql_driver.py
tests/unit/top_queries/: test_top_queries_calc.py
