[project]
name = "postgres-mcp"
version = "0.1.0"
description = "Postgres tuning tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.5.0",
    "psycopg2-binary>=2.9.10",
    "humanize>=4.8.0",
    "pglast==7.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "attrs>=25.3.0",
]
[[project.authors]]
name = "Johann Schleier-Smith"
email = "jssmith@crystal.cloud"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
postgres-mcp = "postgres_mcp:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
